2002-07-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (draw_desk_background):
	(initialize_pager):
	(ReConfigure):
	fixed drawing of the active page when resizing the pager
	(DispatchEvent):
	fixed problem w/ pager not updating properly when getting expose events
	right after a resize

	* FvwmPager/FvwmPager.c (ParseOptions):
	fixed negative balloon offsets

	* FvwmPager/x_pager.c (ReConfigure):
	fixed flickering of hilit desk title when moving pager
	(draw_desk_background):
	(initialize_pager):
	fixed initial drawing of pager label background on inactive desks
	(change_colorset):
	(draw_desk_background):
	fixed drawing of background colour sets w/ top labels in the pager

2002-07-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/FvwmPager.c (ParseOptions):
	(list_property_change):
	* FvwmPager/x_pager.c (initialize_pager):
	(DrawInBalloonWindow):
	(change_colorset):
	(HandleExpose):
	(MapBalloonWindow):
	(UnmapBalloonWindow):
	(change_colorset):
	* FvwmPager/FvwmPager.h (ScreenInfo):
	cleaned up and simplified balloon drawing code

	* FvwmPager/x_pager.c (initialize_pager):
	fixed initial drawing of multi desk pagers

	* FvwmButtons/FvwmButtons.c (CheckForHangon):
	allow wildcards in "hangon" strings
	(DeadPipeCleanup):
	spit out panels with the NoClose option when FvwmButton dies

	* FvwmButtons/FvwmButtons.1:
	re-formatted man page

2002-07-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmAuto/FvwmAuto.c:
	* FvwmAuto/FvwmAuto.1 (Note):
	new options -mfocus, -menter and -menterleave in FvwmAuto
	FvwmAuto can now operate on Enter/Leave events instead of Focus events

	* FvwmEvent/FvwmEvent.c (main):
	select only events that are handled

	* FvwmButtons/FvwmButtons.c:
	removed old debug code

	* FvwmEvent/FvwmEvent.c:
	moved old ChangeLog entries to ../ChangeLog
	re-indented file
	(config):
	(handle_config_line):
	general cleanup

2002-07-05  Mikhael Goikhman  <migo@homemail.com>

	* FvwmScript/Widgets/Swallow.c (CheckForHangon):